0.02005

    - issue #22: add a END block to DBICTestLib that cleans up the t/test.db
    
    - issue #21: added methods to _Group for empty_first_label, and refactored
      item generation out of options, values, value_range to _get_empty_first_option,
      which the others call.

    - Bugfix: insert_before() and insert_after() now check if the object is 
      already a child, and if so, removes it first. Reported by Ferruccio 
      Zamuner.
      
    - Bugfix: save_to_model() many_to_many multi-value fields where 
      'default_column' included the table name (or 'me.') failed.

    - get_* (fields, elements, constraints, etc) now accept any valid method
      as a search parameter rather than a limited subset.

    - add default_natural() to Date element, allowing the use of 
      DateTime::Format::Natural to parse dates such as "today" or "yesterday."

    - New Split filter.
    
    - when() method for Constraints can now accept a callback
    
    - Transformer callbacks now get $params as second argument (as Constraints
      aready were getting)

0.02004 2008-02-22

    - Incompatible Change: $upload->headers no longer returns a hashref, it now
      returns a HTTP::Headers object.
      Tests for $upload->headers->{'Content-Type'} changed to 
      $upload->headers->content_type.
      Tests for $upload->headers->{'Content-Length'} changed to 
      $upload->headers->content_length.
    
    - Catalyst upload object now provides basename(), copy_to(), link_to(), 
      size(), tempname() and type() methods which delegate to the 
      Catalyst::Request::Upload object.
    
    - The original Catalyst::Request::Upload objects can be retrived with the 
      catalyst_upload() method.
    
    - CGI and CGI::Simple upload objects provide size() and type() methods.
    
    - New Constraints: File::Size, File::MIME and File.
    
    - 'Required' and other constraints now work with file uploads.
    
    - Spanish I18N added.
    